k8s/backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: red-hat-provisions
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doughnut-backend
  namespace: red-hat-provisions
  labels:
    app: doughnut-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doughnut-backend
  template:
    metadata:
      labels:
        app: doughnut-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/jkincl/grpc-demo/doughnut-backend:latest
          ports:
            - containerPort: 50051
              name: grpc
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: doughnut-backend
  namespace: red-hat-provisions
spec:
  selector:
    app: doughnut-backend
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
      appProtocol: kubernetes.io/h2c
