k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: doughnut-httproute
  namespace: red-hat-provisions
spec:
  parentRefs:
    - name: example-gateway
      namespace: openshift-ingress
  hostnames:
    - doughnuts.gwapi.ocp.5g95v.sandbox5624.opentlc.com
  rules:
    - backendRefs:
        - name: doughnut-frontend
          port: 8080
